--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           consequuntur, molestiae ipsam assumenda corrupti dolorem.
         </p>
         <img
-          class="image-testimonio justify-content-center col-sm-12 border border-2 border-light"
+          class="testimonio-images"
           src="./assets/img/testimonio1.jpg"
           alt=""
         />
@@ -352,7 +352,7 @@
           consequuntur, molestiae ipsam assumenda corrupti dolorem.
         </p>
         <img
-          class="image-testimonio justify-content-center col-sm-12 border border-2 border-light"
+          class="testimonio-images"
           src="./assets/img/testimonio2.jpg"
           alt=""
         />
@@ -366,7 +366,7 @@
           consequuntur, molestiae ipsam assumenda corrupti dolorem.
         </p>
         <img
-          class="image-testimonio bg-info text-white text-center col-sm-12 border border-2 border-light"
+          class="testimonio-images"
           src="./assets/img/testimonio3.jpg"
           alt=""
         />
@@ -491,19 +491,23 @@
                   
                 </div>
               </div>
-              <div class="col-sm-6">
-                <p><i class="fa-solid fa-phone me-2"></i>+56933445566</p>
-                <p>
-                  <i class="fa-regular fa-envelope me-2"></i>viajeschile@gmail.com
-                </p>
-                <p><i class="fa-brands fa-linkedin me-2"></i>Linkedin</p>
-                <p><i class="fa-brands fa-instagram me-2"></i>Instagram</p>
-              </div>
             </form>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          
+        </div>
+        <div class="col-sm-6">
+          <p><i class="fa-solid fa-phone me-2"></i>+56933445566</p>
+          <p>
+            <i class="fa-regular fa-envelope me-2"></i>viajeschile@gmail.com
+          </p>
+          <p><i class="fa-brands fa-linkedin me-2"></i>Linkedin</p>
+          <p><i class="fa-brands fa-instagram me-2"></i>Instagram</p>
         </div>
       </div>
     </div>
+
+
+
+   
   </body>
 </html>
