--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
     <h1 class="pt-4 pb-2 text-center fs-2" id="testimonios">Testimonios</h1>
     <hr class="hr-bottom border border-white border-2" />
 
-    <div class="testimonio-container text-center">
-      <div class="testimonio-column h-100">
+    <div class="testimonio__container--size text-center">
+      <div class="testimonio__column--size h-100">
         <p>
           ¡Mi experiencia con Viajes Chile fue absolutamente increíble! Desde el
           momento en que contacté con ellos para planificar mi viaje, el equipo
@@ -329,7 +329,7 @@
         />
         <p class="">Mariela</p>
       </div>
-      <div class="testimonio-column h-100">
+      <div class="testimonio__column--size h-100">
         <p>
           Viajar con Viajes Chile fue una experiencia increíble desde el
           principio hasta el final. El personal fue extremadamente atento y se
@@ -344,7 +344,7 @@
         />
         <p class="">Christian</p>
       </div>
-      <div class="testimonio-column h-100">
+      <div class="testimonio__column--size h-100">
         <p>
           Contratar a Viajes Chile fue la mejor decisión para nuestras
           vacaciones familiares. Nos ayudaron a encontrar el paquete ideal para
